--- a/my-app/index.html
+++ b/my-app/index.html
@@ -6,11 +6,17 @@
   <!-- <link rel="icon" type="image/svg+xml" href="/assets/logo.svg" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>GreenCart - GreatStack</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&family=Outfit:wght@100..900&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
+  <script src="./assets/vendor/preline/dist/preline.js"></script>
+
 </body>
 
 </html>
